--- a/PixEditCloudClient.csproj
+++ b/PixEditCloudClient.csproj
@@ -7,6 +7,7 @@
     <IsPackable>false</IsPackable>
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
+    <UserSecretsId>67a181d4-6e57-4f6b-8b59-f39eebb636c8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,6 +25,7 @@
     <None Remove="ClientApp\src\AuthRoute.tsx" />
     <None Remove="ClientApp\src\components\ConvertDocument.tsx" />
     <None Remove="ClientApp\src\components\SignIn.tsx" />
+    <None Remove="ClientApp\src\components\SignOut.tsx" />
     <None Remove="ClientApp\src\store\DocumentProcess.ts" />
     <None Remove="ClientApp\src\store\Globals.ts" />
   </ItemGroup>
@@ -32,6 +34,7 @@
     <TypeScriptCompile Include="ClientApp\src\AuthRoute.tsx" />
     <TypeScriptCompile Include="ClientApp\src\components\ConvertDocument.tsx" />
     <TypeScriptCompile Include="ClientApp\src\components\SignIn.tsx" />
+    <TypeScriptCompile Include="ClientApp\src\components\SignOut.tsx" />
     <TypeScriptCompile Include="ClientApp\src\store\DocumentProcess.ts" />
     <TypeScriptCompile Include="ClientApp\src\store\Globals.ts" />
   </ItemGroup>
