--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixeditcloudclient",
-  "version": "0.1.0",
+  "version": "1.0.5",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
@@ -43,6 +43,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "generate-build-version": "node generate-build-version",
+    "prebuild": "npm run generate-build-version",
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
