--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,9 +1,10 @@
 {
   "name": "pixeditcloudclient",
-  "version": "1.0.42",
+  "version": "1.0.61",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "caniuse-lite": "^1.0.30001726",
     "connected-react-router": "6.5.2",
     "history": "4.10.1",
     "jquery": "^3.4.1",
